# Modpack-Updater

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  changelog.rs  dependency_check.rs  event.rs  git.rs  main.rs  music.rs  ui.rs  update.rs
src/app/: history.rs
