[package]
name = "modpack-updater"
version = "1.0.0"
edition = "2021"
authors = ["Metalhead Twink★"]
description = "a universal client tool to help you keep your Minecraft modpack instance up-to-date with the official Git repository."
license = "MIT"
repository = "https://github.com/minecraftwithtwink/Modpack-Updater"

[dependencies]
crossterm = "0.27"
ratatui = "0.26.1"
rodio = "0.17.3"
git2 = "0.20.2"
anyhow = "1.0"
directories = "5.0"
tui-input = "0.8.0"
arboard = "3.2.0"
lazy_static = "1.4.0"
# fs_extra = "1.3.0" temporarily unsused till I figure out os permissions error.

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"