[package]
name = "modpack-updater"
version = "1.0.1"
edition = "2021"
authors = ["Metalhead Twink★"]
description = "a universal client tool to help you keep your Minecraft modpack instance up-to-date with the official Git repository."
license = "MIT"
repository = "https://github.com/minecraftwithtwink/Modpack-Updater"

[dependencies]
crossterm = "0.27"
ratatui = "0.26.1"
rodio = "0.17.3"
git2 = "0.20.2"
anyhow = "1.0"
directories = "5.0"
tui-input = "0.8.0"
arboard = "3.2.0"
lazy_static = "1.4.0"
self_update = { version = "0.42.0", features = ["archive-tar", "compression-flate2"] }
reqwest = { version = "0.11", features = ["blocking"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "modpack-updater"
path = "src/main.rs"